Fixing of login

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,7 @@
 /* @import url('https: //fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap'); */
-
+html {
+  background-color: lightgray;
+}
 .App {
   width: 100vw;
   height: 100vh;
@@ -42,6 +44,12 @@
 }
 .navbar-logout {
   margin-bottom: 5vh;
+  width: 1vw;
+  height: 1vw;
+}
+.navbar-logoutpic {
+  width: 25px;
+  height: 25px;
 }
 .navbar-weather {
   background-color: burlywood;
@@ -82,24 +90,37 @@
   justify-content: center;
   align-items: center;
 }
-.login-form-div {
+.login-form {
   display: flex;
   flex-direction: column;
 }
 .input {
   border-radius: 1vw;
 }
+button {
+  border-radius: 1vw;
+}
 .login-form-submit {
   border-radius: 1vw;
+}
+.login-input {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.login-submitsignup {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 
 /* Home */
 .home-widgetgrid {
-  margin-left: 15vw;
+  margin-left: 20vw;
   width: 85vw;
   height: 100vh;
-  background-color: red;
+  background-color: lightgrey;
 }
 .home-widget {
   background-color: white;
