--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,9 +1,10 @@
 /* @import url('https: //fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap'); */
-div[themeLight="true"] {
+.all-css {
     --background: #EAEAEA;
     --borders: #CECECE;
     --headers: #B1B1B1;
     --text: #777777;
+    background-color: var(--background);
 }
 div[themeLight="false"] {
     --background: #777777;
@@ -13,7 +14,7 @@ div[themeLight="false"] {
 }
 
 html {
-  background-color: var(--background);
+  background-color: #EAEAEA;
 }
 
 .App {
@@ -53,12 +54,10 @@ html {
   font-size: large;
   width: 15vw;
   text-align: center;
-  /* border-style: inset; */
   border-right: var(--borders) solid .1vw;
   border-bottom: var(--borders) solid .1vw;
-  border-bottom-right-radius: 1vw;
+  border-bottom-right-radius: 2vw;
   border-color: var(--borders);
-  /* border-radius: .5vw; */
   color: var(--text);
   font-weight: bold;
 }
@@ -79,9 +78,15 @@ html {
 
 /* Login */
 .login-page-div {
-  background-color: lime;
-  width: 25vw;
-  height: 20vh;
+  background-color: var(--background);
+  border-top: 2px solid var(--borders);
+  border-top-right-radius: 2vw;
+  border-right: 2px solid;
+  border-bottom-right-radius: 2vw;
+  border-bottom: 2px solid;
+  border-color: var(--borders) !important;
+  width: 20vw;
+  height: 30vh;
   z-index: 5;
   display: flex;
   flex-direction: column;
@@ -92,9 +97,19 @@ html {
   bottom: 10vw;
 }
 
+.login-form-div {
+  height: 30vw;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .login-form {
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .input {
@@ -107,6 +122,7 @@ button {
 
 .login-form-submit {
   border-radius: 1vw;
+  display: flex;
 }
 
 .login-input {
@@ -121,13 +137,19 @@ button {
   align-items: center;
 }
 
+.login-submit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
 /* Home */
 .home-widgetgrid {
   margin-left: 20vw;
   width: 85vw;
   height: 100vh;
-  background-color: var(--background);
+  background-color: #EAEAEA;
 }
 
 .home-widget {
@@ -151,6 +173,7 @@ button {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   /* width: 50vw;
   height: 50vh; */
 }
@@ -163,4 +186,10 @@ button {
 
 .signup-form-submit {
   border-radius: 1vw;
+}
+
+.signup-submit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
