--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,16 +1,17 @@
 /* @import url('https: //fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap'); */
 .all-css {
-    --background: #EAEAEA;
-    --borders: #CECECE;
-    --headers: #B1B1B1;
-    --text: #777777;
-    background-color: var(--background);
+  --background: #EAEAEA;
+  --borders: #CECECE;
+  --headers: #B1B1B1;
+  --text: #777777;
+  background-color: var(--background);
 }
+
 div[themeLight="false"] {
-    --background: #777777;
-    --borders: #B1B1B1;
-    --headers: #CECECE;
-    --text: #EAEAEA;
+  --background: #777777;
+  --borders: #B1B1B1;
+  --headers: #CECECE;
+  --text: #EAEAEA;
 }
 
 html {
@@ -63,9 +64,11 @@ html {
 }
 
 .navbar-extras {
-  margin-bottom: 3vh;
-  width: 3vw;
-  height: 3vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  width: 15vw;
+  height: 5vw;
 }
 
 .navbar-logoutpic {
@@ -102,27 +105,30 @@ html {
   display: flex;
   align-items: center;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
 .login-form {
   display: flex;
+  height: 7vw;
   flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: space-between;
 }
 
 .input {
-  border-radius: 1vw;
-}
-
-button {
-  border-radius: 1vw;
+  border: none;
+  border-left: var(--borders) 1px solid;
+  border-bottom-left-radius: .5vw;
+  border-bottom: var(--borders) 1px solid;
+  background-color: var(--background);
 }
 
 .login-form-submit {
-  border-radius: 1vw;
-  display: flex;
+  border: none;
+  border-left: var(--borders) 1px solid;
+  border-bottom-left-radius: .5vw;
+  border-bottom: var(--borders) 1px solid;
+  background-color: var(--background);
 }
 
 .login-input {
@@ -141,6 +147,11 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.toggle-form {
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 
@@ -162,20 +173,21 @@ button {
 
 
 /* Signup */
-.signup-page-div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.signup-form {
+.signup-form-div {
+  height: 30vw;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   /* width: 50vw;
   height: 50vh; */
+}
+
+.signup-form {
+    display: flex;
+    height: 12vw;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .signup-form-input {
@@ -185,7 +197,11 @@ button {
 }
 
 .signup-form-submit {
-  border-radius: 1vw;
+  border: none;
+  border-left: var(--borders) 1px solid;
+  border-bottom-left-radius: .5vw;
+  border-bottom: var(--borders) 1px solid;
+  background-color: var(--background);
 }
 
 .signup-submit {
