--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -241,6 +241,44 @@ html {
   direction: rtl;
 }
 
+.home-currency {
+  height: 3vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.home-currency-left {
+  width: 50%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.home-currency-left-sub{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.home-currency-right {
+  width: 50%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.home-currency-right-sub{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.home-currency-vl {
+  border-left: 2px var(--borders) solid;
+  height: 3vw;
+}
+
 .testwidget {
   background-color: var(--widgetBackground);
   border: var(--headers) 2px solid;
