--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,7 +2,8 @@
 .all-css {
   background-color: var(--background);
   color: var(--maintext);
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .themetrue {
@@ -21,6 +22,7 @@
   --headers: #848282;
   --secondarytext: #D7C9C2;
   --maintext: #FAE2C2;
+  background-color: (#2A343B);
 }
 
 html {
@@ -139,10 +141,10 @@ html {
 /* Login */
 .login-page-div {
   background-color: var(--background);
+  color: var(--maintext);
   border-top: 2px solid var(--borders);
   border-top-right-radius: 2vw;
   border-right: 2px solid;
-  border-bottom: 2px solid;
   border-color: var(--borders) !important;
   width: 20vw;
   height: 30vh;
@@ -162,9 +164,11 @@ html {
   align-items: center;
   flex-direction: column;
   justify-content: space-evenly;
+  color: var(--maintext);
 }
 
 .login-form {
+  color: var(--maintext);
   display: flex;
   height: 7vw;
   flex-direction: column;
@@ -179,12 +183,13 @@ html {
   background-color: var(--background);
 }
 
-.login-form-submit {
+.login-form-submit-button {
   border: none;
   border-left: var(--borders) 1px solid;
   border-bottom-left-radius: .5vw;
   border-bottom: var(--borders) 1px solid;
   background-color: var(--background);
+  color: var(--maintext);
 }
 
 .login-input {
@@ -197,17 +202,20 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  color: var(--maintext);
 }
 
 .login-submit {
   display: flex;
   justify-content: center;
   align-items: center;
+  color: var(--maintext);
 }
 
 .toggle-form {
   font-weight: bold;
   text-decoration: underline;
+  color: var(--maintext);
 }
 
 
@@ -244,6 +252,15 @@ html {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  margin-left: -5vw;
+}
+
+.home-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin-left: -5vw;
+  margin-right: 10vw;
 }
 
 .home-clock {
@@ -350,12 +367,14 @@ html {
   border-bottom-left-radius: .5vw;
   border-bottom: var(--borders) 1px solid;
   background-color: var(--background);
+  color: var(--maintext);
 }
 
 .signup-submit {
   display: flex;
   justify-content: center;
   align-items: center;
+  color: var(--maintext);
 }
 
 
@@ -409,6 +428,16 @@ html {
   background-color: var(--widgetBackground);
   margin: 15px;
   height: 20vw;
+  width: 40vw;
+  overflow-y: scroll;
+}
+
+.home-news-widget {
+  border: var(--borders) 2px solid;
+  border-radius: .5vw;
+  background-color: var(--widgetBackground);
+  margin: 15px;
+  height: 40vw;
   width: 40vw;
   overflow-y: scroll;
 }
