--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,6 +6,14 @@
   overflow-y: hidden;
 }
 
+.cursorPointer {
+  cursor: pointer;
+}
+
+button {
+  cursor: pointer;
+}
+
 .themetrue {
   --background: ##FAE2C2;
   --widgetBackground: rgba(119, 119, 119, .15);
