--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,3 @@
-/* @import url('https: //fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap'); */
 .all-css {
   background-color: var(--background);
   color: var(--maintext);
@@ -48,527 +47,4 @@ html {
 }
 
 
-/* Nav Bar */
-.navbar-main {
-  position: fixed;
-  top: 0;
-  height: 100vh;
-  width: 15vw;
-  background-color: var(--background);
-  border-right: 2px var(--borders) solid;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  flex-direction: column;
-  border-right-style: inset;
-}
-
-.navbar-buttons {
-  height: 50vh;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: space-evenly;
-}
-
-.navbar-pagebutton {
-  font-size: large;
-  width: 15vw;
-  text-align: center;
-  border-right: var(--borders) solid .1vw;
-  border-bottom: var(--borders) solid .1vw;
-  border-bottom-right-radius: 2vw;
-  color: var(--secondarytext);
-  font-weight: bold;
-}
-
-.navbar-extras {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  width: 15vw;
-  height: 5vw;
-}
-
-.navbar-logoutpic {
-  width: 2vw;
-  height: 2vw;
-  left: 0;
-}
-
-.navbar-todolist {
-  background-color: burlywood;
-  color: red;
-  text-decoration: line-through;
-}
-
-.navbar-calendar {
-  background-color: burlywood;
-  color: red;
-  text-decoration: line-through;
-}
-
-.navbar-dailytrackers {
-  background-color: burlywood;
-  color: red;
-  text-decoration: line-through;
-}
-
-.navbar-musicandmovies {
-  background-color: burlywood;
-  color: red;
-  text-decoration: line-through;
-}
-
-.navbar-externallinks {
-  background-color: burlywood;
-  color: red;
-  text-decoration: line-through;
-}
-
-.navbar-socials {
-  background-color: var(--background);
-  border-top: 2px solid var(--borders);
-  border-left: 2px solid var(--borders);
-  border-bottom: 2px solid var(--borders);
-  border-bottom-left-radius: 2vw;
-  border-top-left-radius: 2vw;
-  height: 15vw;
-  width: 5vw;
-  position: fixed;
-  right: 0;
-  bottom: 10vw;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-direction: column;
-}
-
-
-
-/* Login */
-.login-page-div {
-  background-color: var(--background);
-  color: var(--maintext);
-  border-top: 2px solid var(--borders);
-  border-top-right-radius: 2vw;
-  border-right: 2px solid;
-  border-color: var(--borders) !important;
-  width: 20vw;
-  height: 30vh;
-  z-index: 5;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  left: 0vw;
-  bottom: 0vw;
-}
-
-.login-form-div {
-  height: 30vw;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: space-evenly;
-  color: var(--maintext);
-}
-
-.login-form {
-  color: var(--maintext);
-  display: flex;
-  height: 7vw;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.input {
-  border: none;
-  border-left: var(--borders) 1px solid;
-  border-bottom-left-radius: .5vw;
-  border-bottom: var(--borders) 1px solid;
-  background-color: var(--background);
-}
-
-.login-form-submit-button {
-  border: none;
-  border-left: var(--borders) 1px solid;
-  border-bottom-left-radius: .5vw;
-  border-bottom: var(--borders) 1px solid;
-  background-color: var(--background);
-  color: var(--maintext);
-}
-
-.login-input {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.login-submitsignup {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: var(--maintext);
-}
-
-.login-submit {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: var(--maintext);
-}
-
-.toggle-form {
-  font-weight: bold;
-  text-decoration: underline;
-  color: var(--maintext);
-}
-
-
-
-/* Home */
-.home-widgetgrid {
-  margin-left: 20vw;
-  width: 85vw;
-  height: 100vh;
-  background-color: var(--background);
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.home-namewidget {
-  margin: 1vw;
-}
-
-.widget {
-  background-color: var(--widgetBackground);
-  border: var(--borders) 2px solid;
-  border-radius: .5vw;
-  width: 300px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  margin: 15px;
-}
-
-.home-left {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  margin-left: -5vw;
-}
-
-.home-right {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  margin-left: -5vw;
-  margin-right: 10vw;
-}
-
-.home-clock {
-  justify-self: space-around !important;
-  flex-direction: column;
-}
-
-.home-weather-widget {
-  display: flex;
-  flex-wrap: nowrap;
-  width: auto;
-  flex-direction: row;
-  justify-content: center;
-}
-
-.home-weather p {
-  margin: 1.5vw;
-}
-
-.home-weather-right {
-  direction: rtl;
-}
-
-.home-currency {
-  height: 3vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.home-currency-left {
-  width: 50%;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.home-currency-left-sub {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.home-currency-right {
-  width: 50%;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.home-currency-right-sub {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.home-currency-vl {
-  border-left: 2px var(--borders) solid;
-  height: 3vw;
-}
-
-.testwidget {
-  background-color: var(--widgetBackground);
-  border: var(--borders) 2px solid;
-  border-radius: .5vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 15px;
-  height: 10vw;
-  width: 15vw;
-}
-
-
-
-/* Signup */
-.signup-form-div {
-  height: 30vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  /* width: 50vw;
-  height: 50vh; */
-}
-
-.signup-form {
-  display: flex;
-  height: 12vw;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.signup-form-input {
-  border-radius: 1vw;
-  justify-content: center;
-  align-items: center;
-}
-
-.signup-form-submit {
-  border: none;
-  border-left: var(--borders) 1px solid;
-  border-bottom-left-radius: .5vw;
-  border-bottom: var(--borders) 1px solid;
-  background-color: var(--background);
-  color: var(--maintext);
-}
-
-.signup-submit {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: var(--maintext);
-}
-
-
-
-/* Calendar */
-.calendar-page-div {
-  margin-left: 20vw;
-  width: 85vw;
-  height: 100vh;
-  background-color: var(--background);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.calendar-grid {
-  display: flex;
-  width: 50vw;
-  gap: 20px;
-}
-
-
-
-/* News */
-.news-main {
-  background-color: var(--background);
-  border-color: var(--borders);
-  color: var(--maintext);
-}
-
-.news-page-div {
-  margin-left: 15vw;
-  width: 85vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-left: 15vw;
-}
-
-.news-widgets {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 85vw;
-}
-
-.news-widget {
-  border: var(--borders) 2px solid;
-  border-radius: .5vw;
-  background-color: var(--widgetBackground);
-  margin: 15px;
-  height: 20vw;
-  width: 40vw;
-  overflow-y: scroll;
-}
-
-.home-news-widget {
-  border: var(--borders) 2px solid;
-  border-radius: .5vw;
-  background-color: var(--widgetBackground);
-  margin: 15px;
-  height: 45vw;
-  width: 50vw;
-  overflow-y: scroll;
-}
-
-.news-left {
-  width: 50vw;
-  display: flex;
-  flex-direction: column;
-}
-
-.news-right {
-  width: 50vw;
-  display: flex;
-  flex-direction: column;
-}
-
-.news-item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 40vw;
-}
-
-.news-subject {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: underline;
-}
-
-.news-margins {
-  margin-bottom: 3vw;
-}
-
-.news-image {
-  width: 5vw;
-  margin-right: 1vw;
-}
-
-.news-title {
-  width: 30vw;
-  font-size: medium;
-}
-
-.news-subject {
-  color: var(--maintext);
-}
-
-.news-description {
-  width: 30vw;
-  font-size: small;
-}
-
-.news-hr {
-  width: 30vw;
-}
-
-
-/* Weather */
-.weather-main {
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-  background-color: var(--background);
-  border-color: var(--borders);
-  color: var(--maintext);
-}
-
-.weather-h1 {
-  margin-left: 15vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.weather-component-div {
-  margin-left: 15vw;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-}
-
-.weather p {
-  margin: 1.5vw;
-}
-
-.weather-right {
-  direction: rtl;
-}
-
-.weather-widget {
-  background-color: var(--widgetBackground);
-  border: var(--borders) 2px solid;
-  border-radius: .5vw;
-  width: 17vw;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  margin: 15px;
-}
-
-/* myHub */
-.myhub-main {
-  background-color: var(--background);
-  border-color: var(--borders);
-  color: var(--maintext);
-  margin-left: 15vw;
-  width: 85vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-left: 15vw;
-  height: 100vh;
-}
-
-/* External Links */
-.external-main {
-  background-color: burlywood;
-  color: red;
-  text-decoration: line-through;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-  margin-left: 15vw;
-}
+@media screen and (max-width: 768px) {}
