--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -3,17 +3,16 @@
   top: 0;
   height: 100vh;
   width: 15vw;
-  border-right: 2px var(--borders) solid;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
   flex-direction: column;
-  border-right-style: inset;
-  background: var(--background) !important;
+  padding-left: 1vw;
+  background: none;
 }
 
 .navbar-buttons {
-  height: 50vh;
+  height: 25vh;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -24,9 +23,7 @@
   font-size: large;
   width: 15vw;
   text-align: center;
-  border-right: var(--borders) solid .1vw;
-  border-bottom: var(--borders) solid .1vw;
-  border-bottom-right-radius: 2vw;
+  background: var(--widgetBackground);
   color: var(--secondarytext);
   font-weight: bold;
 }
@@ -45,30 +42,10 @@
   left: 0;
 }
 
-.navbar-todolist {
-  background-color: burlywood;
-  color: red;
-  text-decoration: line-through;
-}
-
-.navbar-calendar {
-  background-color: burlywood;
-  color: red;
-  text-decoration: line-through;
-}
-
-.navbar-dailytrackers {
-  background-color: burlywood;
-  color: red;
-  text-decoration: line-through;
-}
-
-.navbar-musicandmovies {
-  background-color: burlywood;
-  color: red;
-  text-decoration: line-through;
-}
-
+.navbar-todolist,
+.navbar-calendar,
+.navbar-dailytrackers,
+.navbar-musicandmovies,
 .navbar-externallinks {
   background-color: burlywood;
   color: red;
@@ -102,7 +79,7 @@
 }
 
 .login-page-div {
-  background-color: var(--background);
+
   color: var(--maintext);
   border-top: 2px solid var(--borders);
   border-top-right-radius: 2vw;
@@ -142,7 +119,7 @@
   border-left: var(--borders) 1px solid;
   border-bottom-left-radius: .5vw;
   border-bottom: var(--borders) 1px solid;
-  background-color: var(--background);
+
 }
 
 .login-form-submit-button {
@@ -150,7 +127,7 @@
   border-left: var(--borders) 1px solid;
   border-bottom-left-radius: .5vw;
   border-bottom: var(--borders) 1px solid;
-  background-color: var(--background);
+
   color: var(--maintext);
 }
 
@@ -208,7 +185,7 @@
   border-left: var(--borders) 1px solid;
   border-bottom-left-radius: .5vw;
   border-bottom: var(--borders) 1px solid;
-  background-color: var(--background);
+
   color: var(--maintext);
 }
 
@@ -228,8 +205,6 @@
     top: 0;
     height: 5vh;
     width: 100vw;
-    background: var(--background) !important;
-    border-bottom: 2px var(--borders) solid;
     display: flex;
     justify-content: space-around;
     align-items: flex-end;
@@ -244,12 +219,8 @@
   }
 
   .navbar-pagebutton {
+    background: rgba(255, 255, 255, .75);
     font-size: medium;
-    width: 20vw;
-    text-align: center;
-    border-right: var(--borders) solid .1vw;
-    border-bottom: var(--borders) solid .1vw;
-    border-bottom-right-radius: 2vw;
     color: var(--secondarytext);
     font-weight: bold;
   }
@@ -269,7 +240,7 @@
   }
 
   .navbar-socials {
-    background-color: var(--background);
+
     border-top: 2px solid var(--borders);
     border-left: 2px solid var(--borders);
     border-right: 2px solid var(--borders);
@@ -305,7 +276,7 @@
     width: 100vw;
     height: 100vh;
     position: fixed;
-    background-color: var(--background);
+
     color: var(--maintext);
     border-top: 2px solid var(--borders);
     border-top-right-radius: 2vw;
@@ -339,7 +310,7 @@
     border-left: var(--borders) 1px solid;
     border-bottom-left-radius: .5vw;
     border-bottom: var(--borders) 1px solid;
-    background-color: var(--background);
+
   }
 
   .login-form-submit-button {
@@ -348,7 +319,7 @@
     border-left: var(--borders) 1px solid;
     border-bottom-left-radius: .5vw;
     border-bottom: var(--borders) 1px solid;
-    background-color: var(--background);
+
     color: var(--maintext);
   }
 
@@ -399,7 +370,7 @@
     border-left: var(--borders) 1px solid;
     border-bottom-left-radius: .5vw;
     border-bottom: var(--borders) 1px solid;
-    background-color: var(--background);
+
     color: var(--maintext);
   }
 
