--- a/src/styles/News.css
+++ b/src/styles/News.css
@@ -50,7 +50,7 @@
   padding-left: 2vw;
   padding-right: 2vw;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
 
