--- a/src/styles/MyHub.css
+++ b/src/styles/MyHub.css
@@ -2,7 +2,7 @@
   background: var(--background);
 }
 
-.myhub-submain {
+.myhub-editPages {
   border-color: var(--borders);
   color: var(--maintext);
   margin-left: 15vw;
@@ -12,4 +12,15 @@
   align-items: center;
   margin-left: 15vw;
   height: 100vh;
+}
+
+@media screen and (max-width: 768px) {
+  .myhub-main {
+    padding-top: 10vh;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
