--- a/src/styles/Weather.css
+++ b/src/styles/Weather.css
@@ -1,6 +1,6 @@
 .weather-main {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   overflow-x: hidden;
   background: var(--background);
   border-color: var(--borders);
@@ -34,7 +34,7 @@
   width: 17vw;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   margin: 15px;
 }
@@ -50,7 +50,7 @@
     padding-top: 7vh;
     padding-left: 0vh;
     width: 100%;
-    height: auto;
+    min-height: 100vh;
     padding-bottom: 7vh;
 
     border-color: var(--borders);
@@ -59,11 +59,13 @@
 
   .weather-h1 {
     display: flex;
+    padding-left: 0vh;
     justify-content: center;
     align-items: center;
   }
 
   .weather-component-div {
+    padding-left: 0vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -84,7 +86,7 @@
     width: 80vw;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
   }
 }
