--- a/src/styles/ToDoList.css
+++ b/src/styles/ToDoList.css
@@ -1,29 +1,27 @@
+.toDoListContainter {
+  background: var(--background);
+}
+
 button {
   background-color: white !important;
 }
 
 .toDoList-main {
   width: 84vw;
-  min-height: 100vh;
   margin-left: 16vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: var(--background);
+  /* background: var(--background);
   border-color: var(--borders);
-  color: var(--maintext);
-}
-
-.toDoList-h1 {
-  margin-top: 10vh;
+  color: var(--maintext); */
 }
 
 .toDoList-addItem {
   margin-bottom: 10vh;
 }
 
-.toDoList-h1,
 .toDoList-list {
   padding: 1vw;
   display: flex;
