--- a/src/styles/ToDoList.css
+++ b/src/styles/ToDoList.css
@@ -1,5 +1,7 @@
 .toDoListContainter {
   background: var(--background);
+  color: var(--maintext);
+  border-color: var(--borders);
 }
 
 button {
@@ -13,9 +15,6 @@ button {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* background: var(--background);
-  border-color: var(--borders);
-  color: var(--maintext); */
 }
 
 .toDoList-addItem {
@@ -23,19 +22,32 @@ button {
 }
 
 .toDoList-list {
+  width: 100%;
+  min-height: 10vh;
   padding: 1vw;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-evenly;
   list-style: none;
 }
 
 .toDoList-list li {
-  padding: .2vh;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 1vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: space-evenly;
+}
+
+input {
+  width: 85%;
 }
 
 .toDoList-list-div {
+  width: 50%;
+  min-height: 15vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
